--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.3",
     "@reduxjs/toolkit": "^1.1.0",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^4.6.3",
@@ -26,6 +27,7 @@
     "moment": "^2.27.0",
     "nest-next": "^9.1.0",
     "next": "^9.5.2",
+    "next-images": "^1.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -37,11 +39,11 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@types/next": "^9.0.0",
     "@types/node": "^12.7.1",
     "@types/react": "^16.9.1",
-    "@types/styled-components": "^5.1.3",
-    "@types/next": "^9.0.0",
     "@types/react-redux": "^7.1.9",
+    "@types/styled-components": "^5.1.3",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
