--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^16.9.1",
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.3",
+    "babel-plugin-styled-components": "^1.11.1",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
